fix layout issues in header

--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -5,8 +5,9 @@
   background: linear-gradient(180deg, #ffffff 39.9%, #f8f8f8 100%);
   padding-bottom: 1.5rem;
   padding-top: 1rem;
-  gap: 2rem;
+  row-gap: 2rem; //karin to make sure with team
   max-height: 200px;
+  
 
   &.scrolled {
     position: sticky;
